--- a/Ch03/src/main/webapp/WEB-INF/web.xml
+++ b/Ch03/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+
   <display-name>Ch03</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -9,4 +10,27 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+  	<description>전역설정값</description>
+  	<param-name>PARAM1</param-name>
+  	<param-value>1</param-value>
+  </context-param>
+  
+   <context-param>
+  	<description>전역설정값</description>
+  	<param-name>PARAM2</param-name>
+  	<param-value>2</param-value>
+  </context-param>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/exception/404.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/exception/500.jsp</location>
+  </error-page>
+  
 </web-app>
