--- a/MVCboard/.project
+++ b/MVCboard/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MVCmodel2</name>
+	<name>MVCboard</name>
 	<comment></comment>
 	<projects>
 	</projects>
