--- a/User/src/main/webapp/WEB-INF/web.xml
+++ b/User/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,16 @@
   	<filter-name>SetCharacterEncodingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <!-- 모델2 보안 설정 -->
+  <security-constraint>
+  	<display-name>Prohibit Model1</display-name>
+  	<web-resource-collection>
+  		<web-resource-name>secure page</web-resource-name>
+  		<url-pattern>*.jsp</url-pattern>
+  	</web-resource-collection>
+  	<auth-constraint>
+  		<role-name>nobody</role-name>
+  	</auth-constraint>  
+  </security-constraint>
 </web-app>
